--- a/XamarinApp2TiposTela/XamarinApp2TiposTela/TiposPaginas/Navigation/Modal.xaml
+++ b/XamarinApp2TiposTela/XamarinApp2TiposTela/TiposPaginas/Navigation/Modal.xaml
@@ -5,19 +5,26 @@
              BackgroundColor="#8cf3ff">
     <ContentPage.Content>
         <StackLayout>
-            <StackLayout HeightRequest="50">
-                <Button Text="X" 
-                    Clicked="CloseModal"
-                    HorizontalOptions="Start"></Button>
-                <Label Text="Eu sou o título"
-                    BackgroundColor="SlateBlue"
-                    TextColor="White"
-                    HorizontalTextAlignment="Center"
-                    HorizontalOptions="FillAndExpand"></Label>
+            <StackLayout>
+                <StackLayout HorizontalOptions="End" VerticalOptions="End">
+                    <Button Text="X" 
+                        Clicked="CloseModal"></Button>
+                </StackLayout>
+                <StackLayout HorizontalOptions="FillAndExpand" 
+                    VerticalOptions="FillAndExpand">
+                    <Label Text="Modal Título"
+                        BackgroundColor="SlateBlue"
+                        TextColor="White"
+                        HorizontalTextAlignment="Center"
+                        VerticalTextAlignment="Center"></Label>
+                </StackLayout>
             </StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout HorizontalOptions="CenterAndExpand"
+                VerticalOptions="CenterAndExpand">
+                <Label Text="Conteúdo do Modal"
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
